crates/cypher-sema/src/snapshots/cypher_sema__dialect__tests__apoc_functions_oc_denied.snap
---
source: crates/cypher-sema/src/dialect.rs
expression: "run_check(&GATE_APOC_FUNCTIONS, DialectMode::OpenCypherV9)"
---
denied: E4016: construct `apoc_functions` is not allowed in dialect `OpenCypherV9`; allowed in: no v1 dialect (deferred construct, see spec §9.3)
