crates/cypher-sema/src/snapshots/cypher_sema__dialect__tests__integer_division_oc_ok.snap
---
source: crates/cypher-sema/src/dialect.rs
expression: "run_check(&GATE_INTEGER_DIVISION, DialectMode::OpenCypherV9)"
---
allowed
