crates/cypher-sema/src/snapshots/cypher_sema__dialect__tests__label_negation_gql_ok.snap
---
source: crates/cypher-sema/src/dialect.rs
expression: "run_check(&GATE_LABEL_NEGATION, DialectMode::GqlAligned)"
---
allowed
