crates/cypher-sema/src/snapshots/cypher_sema__dialect__tests__label_negation_oc_denied.snap
---
source: crates/cypher-sema/src/dialect.rs
expression: "run_check(&GATE_LABEL_NEGATION, DialectMode::OpenCypherV9)"
---
denied: E4010: construct `label_negation` is not allowed in dialect `OpenCypherV9`; allowed in: GqlAligned
