crates/cypher-sema/src/snapshots/cypher_sema__dialect__tests__load_csv_oc_denied.snap
---
source: crates/cypher-sema/src/dialect.rs
expression: "run_check(&GATE_LOAD_CSV, DialectMode::OpenCypherV9)"
---
denied: E4015: construct `load_csv` is not allowed in dialect `OpenCypherV9`; allowed in: no v1 dialect (deferred construct, see spec §9.3)
