crates/cypher-sema/src/snapshots/cypher_sema__dialect__tests__pass_call_apoc_gql_denied.snap
---
source: crates/cypher-sema/src/dialect.rs
expression: "run_gate(&call_stmt(\"apoc.util.sleep\"), DialectMode::GqlAligned)"
---
diagnostics: 1
  E4016: construct `apoc_functions` is not allowed in dialect `GqlAligned`; allowed in: no v1 dialect (deferred construct, see spec §9.3)
