crates/cypher-sema/src/snapshots/cypher_sema__dialect__tests__pass_call_plain_gql_clean.snap
---
source: crates/cypher-sema/src/dialect.rs
expression: "run_gate(&call_stmt(\"db.labels\"), DialectMode::GqlAligned)"
---
diagnostics: 0
