crates/cypher-sema/src/snapshots/cypher_sema__dialect__tests__pass_match_return_gql_clean.snap
---
source: crates/cypher-sema/src/dialect.rs
expression: "run_gate(&match_return_stmt(), DialectMode::GqlAligned)"
---
diagnostics: 0
